--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -16,8 +16,9 @@
 <body class="flex-column">
     <data id="data" code="<%=game.code%>" class="hidden"></data>
     <audio  class="hidden" id="clockTick" src="../../public/res/sounds/tick.wav"></audio>
-    <audio  class="hidden" id="whoosh1" src="../../public/res/sounds/whoosh.mp3"></audio>
+    <audio  class="hidden" id="whoosh1" src="../../public/res/sounds/whoosh1.mp3"></audio>
     <audio  class="hidden" id="whoosh2" src="../../public/res/sounds/whoosh2.mp3"></audio>
+    <audio  class="hidden" id="ding" src="../../public/res/sounds/ding2.mp3"></audio>
     <%-include('partials/header.ejs', {user})%>
 
     <div id="waiting-screen" class="flex-column w100" code="<%=game.code%>">
@@ -44,7 +45,7 @@
             <div class="messages  flex-column"></div>
             <form method="dialog" id="lobbyChatForm" onsubmit="sendLobbyChat()" class="flex-row" autocomplete="off">
                 <input type="text" name="message">
-                <button  class="send image"><img src="../../public/res/UI/send.svg" alt=""></button>
+                <button  class="send fit-image image"><img src="../../public/res/UI/send.svg" alt=""></button>
             </form>
         </div>
     </div>
@@ -76,43 +77,27 @@
             <aside class="left">
                 <div class="player flex-row" team='0' member='0'>
                     <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
-                    <div class="username">Nicu blaj</div>
+                    <div class="username">Dorin</div>
                     <div class="image team-logo"><img src="../../public/res/images/diamond.svg" alt=""></div>
                 </div>
                 <div class="player flex-row" team='1' member='1'>
                     <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
-                    <div class="username">Dorin HErmes costello</div>
+                    <div class="username">Radu</div>
                     <div class="image team-logo"><img src="../../public/res/images/club.svg" alt=""></div>
                 </div>
             </aside>
             <div class="table flex-row">
-                <div class="cards flex-row">
-                    <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/S10.png" alt=""></div>
-                    </div>
-                    <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/S10.png" alt=""></div>
-                    </div>
-                    <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/S10.png" alt=""></div>
-                    </div>
-                    <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/S10.png" alt=""></div>
-                    </div>
-                    <div class="card-slot flex-row">
-                        <div class="card"><img src="../../public/res/cards/S10.png" alt=""></div>
-                    </div>
-                </div>
+                <div class="cards flex-row"></div>
             </div>
             <aside class="right">
                 <div class="player flex-row"  team='1' member='0'>
                     <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
-                    <div class="username">Dorin</div>
+                    <div class="username">Papadia</div>
                     <div class="image team-logo"><img src="../../public/res/images/club.svg" alt=""></div>
                 </div>
                 <div class="player flex-row"  team='0' member='1'>
                     <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
-                    <div class="username">Dorin</div>
+                    <div class="username">Veli</div>
                     <div class="image team-logo"><img src="../../public/res/images/diamond.svg" alt=""></div>
                 </div>
             </aside>
@@ -122,7 +107,7 @@
                 <div class="messages  flex-column"></div>
                 <form method="dialog" id="gameChatForm" onsubmit="sendGameChat()" class="flex-row" autocomplete="off">
                     <input type="text" name="message">
-                    <button  class="send image"><img src="../../public/res/UI/send.svg" alt=""></button>
+                    <button  class="send fit-image image"><img src="../../public/res/UI/send.svg" alt=""></button>
                 </form>
             </div>
 
