BUG FIXED + NEW IMAGE FIT MECHANIC

--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -45,7 +45,7 @@
             <div class="messages  flex-column"></div>
             <form method="dialog" id="lobbyChatForm" onsubmit="sendLobbyChat()" class="flex-row" autocomplete="off">
                 <input type="text" name="message">
-                <button  class="send fit-image image"><img src="../../public/res/UI/send.svg" alt=""></button>
+                <button  class="send fit-image"><img src="../../public/res/UI/send.svg" alt=""></button>
             </form>
         </div>
     </div>
@@ -65,11 +65,11 @@
             <div class="score flex-column">
                 <div class="team 1 flex-row">
                     <div class="image"><img src="../../public/res/images/diamond.svg" alt=""></div>
-                    <div class="value">3</div>
+                    <div class="value">0</div>
                 </div>
                 <div class="team 2 flex-row">
                     <div class="image"><img src="../../public/res/images/club.svg" alt=""></div>
-                    <div class="value">5</div>
+                    <div class="value">0</div>
                 </div>
             </div>
         </section>
@@ -107,7 +107,7 @@
                 <div class="messages  flex-column"></div>
                 <form method="dialog" id="gameChatForm" onsubmit="sendGameChat()" class="flex-row" autocomplete="off">
                     <input type="text" name="message">
-                    <button  class="send fit-image image"><img src="../../public/res/UI/send.svg" alt=""></button>
+                    <button  class="send fit-image"><img src="../../public/res/UI/send.svg" alt=""></button>
                 </form>
             </div>
 
