--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -40,7 +40,7 @@ button {
     justify-content: center;
     align-items: center;
 }
-.fll-image img{
+.fill-image img{
     height: 100%;
     width: 100%;
     object-fit: cover;
