--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -52,8 +52,8 @@
     <main class="flex-column ">
         <section class="top flex-row">
             <div class="sound">
-                <div class="sound-on image" onclick="turnOffSound()"><img src="../../public/res/UI/sound.svg" alt=""></div>
-                <div class="sound-off image hidden" onclick="turnOnSound()"><img src="../../public/res/UI/mute.svg" alt=""></div>
+                <div class="sound-on" onclick="turnOffSound()"><img src="../../public/res/UI/sound.svg" alt=""></div>
+                <div class="sound-off hidden" onclick="turnOnSound()"><img src="../../public/res/UI/mute.svg" alt=""></div>
             </div>
             <div class="timer flex-row">
                 <div class="round"></div>
@@ -63,26 +63,27 @@
                 </div>
             </div>
             <div class="score flex-column">
-                <div class="team 1 flex-row">
+                <div team='0' class="team 0 flex-row">
                     <div class="image"><img src="../../public/res/images/diamond.svg" alt=""></div>
                     <div class="value">0</div>
                 </div>
-                <div class="team 2 flex-row">
+                <div team='1' class="team 1 flex-row">
                     <div class="image"><img src="../../public/res/images/club.svg" alt=""></div>
                     <div class="value">0</div>
                 </div>
+                
             </div>
         </section>
         <section class="center flex-row w100">
             <aside class="left">
                 <div class="player flex-row" team='0' member='0'>
                     <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
-                    <div class="username">Dorin</div>
+                    <div class="username">No player</div>
                     <div class="image team-logo"><img src="../../public/res/images/diamond.svg" alt=""></div>
                 </div>
                 <div class="player flex-row" team='1' member='1'>
                     <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
-                    <div class="username">Radu</div>
+                    <div class="username">No player</div>
                     <div class="image team-logo"><img src="../../public/res/images/club.svg" alt=""></div>
                 </div>
             </aside>
@@ -92,12 +93,12 @@
             <aside class="right">
                 <div class="player flex-row"  team='1' member='0'>
                     <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
-                    <div class="username">Papadia</div>
+                    <div class="username">No player</div>
                     <div class="image team-logo"><img src="../../public/res/images/club.svg" alt=""></div>
                 </div>
                 <div class="player flex-row"  team='0' member='1'>
                     <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
-                    <div class="username">Veli</div>
+                    <div class="username">No player</div>
                     <div class="image team-logo"><img src="../../public/res/images/diamond.svg" alt=""></div>
                 </div>
             </aside>
@@ -115,11 +116,9 @@
                 <div class="card-slot flex-row"> <div class="card"><img src="../../public/res/cards/DJ.png" alt=""></div></div>
                 <div class="card-slot flex-row"> <div class="card"><img src="../../public/res/cards/C10.png" alt=""></div></div>
             </div>
-            <div class="give-up flex-column glowing">
-                <div class="topleft icon"><img src="../../public/res/images/surrender.svg" alt=""></div>
-                <div class="text">Give up</div>
-                <div class="bottomright icon"><img src="../../public/res/images/surrender.svg" alt=""></div>
-            </div>
+            <abbr onclick="doNotCut()" title="Don't cut / Give up" class="give-up flex-column fit-image">
+               <img src="../../public/res/images/give-up.svg" alt="">
+            </abbr>
         </section>
         </main>
 </body>
