--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -14,7 +14,7 @@ main{
 .game-list{
     width: 100%;
     border-radius: 1rem;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .game-box{
