--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -120,7 +120,10 @@
                <img src="../../public/res/images/give-up.svg" alt="">
             </abbr>
         </section>
-        </main>
+    </main>
+    <div id="ending-screen">
+        
+    </div>
 </body>
 
 </html>
