--- a/views/main.ejs
+++ b/views/main.ejs
@@ -15,13 +15,13 @@
     <main>
         <section class="game-list flex-row">
             <div class="game-box flex-row">
-                <%- include('partials/deck', {game: 'romaneasca', suit: 'heart', color:'red'})%>
+                <%- include('partials/deck', {game: 'romaneasca', suit: 'heart', color:'redTeam'})%>
             </div>
             <div class="game-box flex-row">
-                <%- include('partials/deck', {game: 'septica', suit: 'diamond', color:'red'})%>
+                <%- include('partials/deck', {game: 'septica', suit: 'diamond', color:'redTeam'})%>
             </div>
             <div class="game-box flex-row">
-                <%- include('partials/deck', {game: 'blackjack', suit: 'spade', color:'gray'})%>
+                <%- include('partials/deck', {game: 'blackjack', suit: 'spade', color:'blackTeam'})%>
             </div>
         </section>
     </main>
