--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -121,8 +121,35 @@
             </abbr>
         </section>
     </main>
-    <div id="ending-screen">
-        
+    <div id="ending-screen" class="flex-column">
+        <div class="container flex-column">
+            <div class="title flex-row">
+                <div class="logo fit-image"><img src="../../public/res/images/diamond.svg" alt=""></div>
+                <h1>The <span class="team">DIAMONDS</span> won</h1>
+                <div class="logo fit-image"><img src="../../public/res/images/club.svg" alt=""></div>
+            </div>
+
+            <div class="winners flex-row w100">
+                <div class="winner flex-row">
+                    <div class="crown fit-image"><img src="../../public/res/images/crown.svg" alt=""></div>
+                    <div class="image fill-image"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
+                    <div class="username">Winner 1</div>
+                </div>
+                <div class="winner flex-row">
+                    <div class="crown fit-image"><img src="../../public/res/images/crown.svg" alt=""></div>
+                    <div class="image fill-image"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
+                    <div class="username">Winnnnnnnnnner 2</div>
+                </div>
+            </div>
+            <div class="score flex-row">
+                <div team="0">5</div>
+                <div class="dash">-</div>
+                <div team="1">3</div>
+            </div>
+        </div>
+        <div class="timer">
+            Clearing the game in 3s
+        </div>
     </div>
 </body>
 
