--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -15,12 +15,13 @@
 
 <body class="flex-column">
     <data id="data" code="<%=game.code%>" sound="<%=user.sound%>" class="hidden"></data>
-    <audio  class="hidden" id="clockTick" src="../../public/res/sounds/tick.wav"></audio>
-    <audio  class="hidden" id="whoosh1" src="../../public/res/sounds/whoosh1.mp3"></audio>
-    <audio  class="hidden" id="whoosh2" src="../../public/res/sounds/whoosh2.mp3"></audio>
-    <audio  class="hidden" id="ding" src="../../public/res/sounds/ding2.mp3"></audio>
-    <%-include('partials/header.ejs', {user})%>
+    <audio class="hidden" id="clockTick" src="../../public/res/sounds/tick.wav"></audio>
+    <audio class="hidden" id="whoosh1" src="../../public/res/sounds/whoosh1.mp3"></audio>
+    <audio class="hidden" id="whoosh2" src="../../public/res/sounds/whoosh2.mp3"></audio>
+    <audio class="hidden" id="ding" src="../../public/res/sounds/ding2.mp3"></audio>
+    <audio class="hidden" id="winner" src="../../public/res/sounds/winner.mp3"></audio>
 
+    <%-include('partials/header.ejs', {user})%>
     <div id="waiting-screen" class="flex-column w100" code="<%=game.code%>">
         <div class="players flex-row">If you see this message you should refresh/rejoin!</div>
         <h2 class="title">Choose a team</h2>
@@ -40,20 +41,22 @@
             <div class="ready-count">Players ready: 0/4</div>
             <div class="starting-in">Waiting for players</div>
         </div>
-        
+
         <div class="chat lobby flex-column">
             <div class="messages  flex-column"></div>
             <form method="dialog" id="lobbyChatForm" onsubmit="sendLobbyChat()" class="flex-row" autocomplete="off">
                 <input type="text" name="message">
-                <button  class="send fit-image"><img src="../../public/res/UI/send.svg" alt=""></button>
+                <button class="send fit-image"><img src="../../public/res/UI/send.svg" alt=""></button>
             </form>
         </div>
     </div>
     <main class="flex-column ">
         <section class="top flex-row">
             <div class="sound">
-                <div class="sound-on <% if(user.sound == 0){%>hidden<%}%>" onclick="turnOffSound()"><img src="../../public/res/UI/sound.svg" alt=""></div>
-                <div class="sound-off <% if(user.sound == 1){%>hidden<%}%>" onclick="turnOnSound()"><img src="../../public/res/UI/mute.svg" alt=""></div>
+                <div class="sound-on <% if(user.sound == 0){%>hidden<%}%>" onclick="turnOffSound()"><img
+                        src="../../public/res/UI/sound.svg" alt=""></div>
+                <div class="sound-off <% if(user.sound == 1){%>hidden<%}%>" onclick="turnOnSound()"><img
+                        src="../../public/res/UI/mute.svg" alt=""></div>
             </div>
             <div class="timer flex-row">
                 <div class="round"></div>
@@ -71,18 +74,20 @@
                     <div class="image"><img src="../../public/res/images/club.svg" alt=""></div>
                     <div class="value">0</div>
                 </div>
-                
+
             </div>
         </section>
         <section class="center flex-row w100">
             <aside class="left">
                 <div class="player flex-row" team='0' member='0'>
-                    <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
+                    <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg"
+                            alt=""></div>
                     <div class="username">No player</div>
                     <div class="image team-logo"><img src="../../public/res/images/diamond.svg" alt=""></div>
                 </div>
                 <div class="player flex-row" team='1' member='1'>
-                    <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
+                    <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg"
+                            alt=""></div>
                     <div class="username">No player</div>
                     <div class="image team-logo"><img src="../../public/res/images/club.svg" alt=""></div>
                 </div>
@@ -91,13 +96,15 @@
                 <div class="cards flex-row"></div>
             </div>
             <aside class="right">
-                <div class="player flex-row"  team='1' member='0'>
-                    <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
+                <div class="player flex-row" team='1' member='0'>
+                    <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg"
+                            alt=""></div>
                     <div class="username">No player</div>
                     <div class="image team-logo"><img src="../../public/res/images/club.svg" alt=""></div>
                 </div>
-                <div class="player flex-row"  team='0' member='1'>
-                    <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
+                <div class="player flex-row" team='0' member='1'>
+                    <div class="image profile-picture"><img src="../../public/data/avatars/default_avatar.svg"
+                            alt=""></div>
                     <div class="username">No player</div>
                     <div class="image team-logo"><img src="../../public/res/images/diamond.svg" alt=""></div>
                 </div>
@@ -106,18 +113,23 @@
         <section class="bottom flex-row">
             <div class="chat game flex-column">
                 <div class="messages  flex-column"></div>
-                <form method="dialog" id="gameChatForm" onsubmit="sendGameChat()" class="flex-row" autocomplete="off">
+                <form method="dialog" id="gameChatForm" onsubmit="sendGameChat()" class="flex-row"
+                    autocomplete="off">
                     <input type="text" name="message">
-                    <button  class="send fit-image"><img src="../../public/res/UI/send.svg" alt=""></button>
+                    <button class="send fit-image"><img src="../../public/res/UI/send.svg" alt=""></button>
                 </form>
             </div>
 
             <div class="hand flex-row">
-                <div class="card-slot flex-row"> <div class="card"><img src="../../public/res/cards/DJ.png" alt=""></div></div>
-                <div class="card-slot flex-row"> <div class="card"><img src="../../public/res/cards/C10.png" alt=""></div></div>
+                <div class="card-slot flex-row">
+                    <div class="card"><img src="../../public/res/cards/DJ.png" alt=""></div>
+                </div>
+                <div class="card-slot flex-row">
+                    <div class="card"><img src="../../public/res/cards/C10.png" alt=""></div>
+                </div>
             </div>
             <abbr onclick="doNotCut()" title="Don't cut / Give up" class="give-up flex-column fit-image">
-               <img src="../../public/res/images/give-up.svg" alt="">
+                <img src="../../public/res/images/give-up.svg" alt="">
             </abbr>
         </section>
     </main>
@@ -132,19 +144,33 @@
             <div class="winners flex-row w100">
                 <div class="winner flex-row">
                     <div class="crown fit-image"><img src="../../public/res/images/crown.svg" alt=""></div>
-                    <div class="image fill-image"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
+                    <div class="image fill-image"><img src="../../public/data/avatars/default_avatar.svg" alt="">
+                    </div>
                     <div class="username">Winner 1</div>
                 </div>
                 <div class="winner flex-row">
                     <div class="crown fit-image"><img src="../../public/res/images/crown.svg" alt=""></div>
-                    <div class="image fill-image"><img src="../../public/data/avatars/default_avatar.svg" alt=""></div>
+                    <div class="image fill-image"><img src="../../public/data/avatars/default_avatar.svg" alt="">
+                    </div>
+                    <div class="username">Winner 1</div>
+                </div>
+                <div class="winner flex-row">
+                    <div class="crown fit-image"><img src="../../public/res/images/crown.svg" alt=""></div>
+                    <div class="image fill-image"><img src="../../public/data/avatars/default_avatar.svg" alt="">
+                    </div>
+                    <div class="username">Winner 1</div>
+                </div>
+                <div class="winner flex-row">
+                    <div class="crown fit-image"><img src="../../public/res/images/crown.svg" alt=""></div>
+                    <div class="image fill-image"><img src="../../public/data/avatars/default_avatar.svg" alt="">
+                    </div>
                     <div class="username">Winnnnnnnnnner 2</div>
                 </div>
             </div>
             <div class="score flex-row">
-                <div team="0">5</div>
+                <div team="0">0</div>
                 <div class="dash">-</div>
-                <div team="1">3</div>
+                <div team="1">0</div>
             </div>
         </div>
         <div class="timer">
