--- a/public/styles/romaneasca.css
+++ b/public/styles/romaneasca.css
@@ -6,7 +6,7 @@ body {
 #waiting-screen {
     background-color: var(--black);
     position: absolute;
-    z-index: 12;
+    z-index: 10;
     top: 4rem;
     min-height: calc(100vh - 4rem);
     width: 100%;
@@ -106,12 +106,6 @@ body {
     justify-content: center;
     align-items: center;
 }
-#waiting-screen .lobby.chat{
-    align-self: flex-start;
-    margin-left: 1rem;
-    position: fixed;
-    bottom: 1rem;
-}
 #waiting-screen .ready{
     width: min(40rem, 98%);
     padding: 0.5rem;
@@ -137,7 +131,7 @@ section.top {
     margin-bottom: 1rem;
     position: sticky;
     top:0;
-    z-index: 11;
+    z-index: 8;
 }
 section.top > *{
     margin: 0 0.5rem;
@@ -219,7 +213,7 @@ aside .player .image.profile-picture {
     width: 3rem;
     height: 3rem;
     border-radius: 10rem;
-    border: solid 0.1rem var(--light);
+    border: solid 0.1rem var(--mainl);
 }
 aside.left .cut{
     position: absolute;
@@ -293,6 +287,9 @@ section.bottom {
     bottom: 0;
     justify-content: space-between;
 }
+section.bottom .pixel{
+    width: 10rem;
+}
 section.bottom .hand{
     position: relative;
     bottom: -5rem;
@@ -321,10 +318,12 @@ section.bottom .hand{
 }
 
 .chat {
-    align-self: flex-end;
+    position: fixed;
+    bottom: 1rem;
+    left: 1rem;
+    z-index: 11;
     width: 20rem;
     font-size: 0.9rem;
-    justify-self: flex-start;
 }
 .chat .messages{
     width: 100%;
@@ -335,7 +334,23 @@ section.bottom .hand{
     border-radius: 0.5rem;
     background-color: var(--dark);
 }
+.chat .messages::-webkit-scrollbar{
+    width: 1rem;
+}
+.chat .messages::-webkit-scrollbar-thumb{
+    background-color: var(--gray);
+    border-left: solid 3px var(--black);
+    border-radius: 2px;
+}
+.chat .messages::-webkit-scrollbar-thumb:hover{
+    background-color: var(--maind);
+}
+.chat .messages::-webkit-scrollbar-track{
+    background-color: var(--dark);
+    border-left: solid 3px var(--black);
+}
 .chat .messages .message{
+    color: var(--white);
     width: 100%;
     justify-content: flex-start;
     margin: 0.25rem 0;
@@ -372,7 +387,7 @@ section.bottom .hand{
     color: var(--black);
     font-size: 1rem;
     background-color: transparent;
-    border-bottom: solid 0.1rem var(--white);
+    border-bottom: solid 0.075rem var(--white);
     color: var(--white);
     margin-right: 0.5rem;
 }
@@ -407,7 +422,7 @@ section.bottom .give-up{
     display: none;
     position: absolute;
     top: 4rem;
-    z-index: 13;
+    z-index:10;
     min-height: calc(100vh - 4rem);
     width: 100%;
     background-color:  hsla(175, 15%, 7%, 0.9);;
