--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -5,68 +5,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Romaneasca</title>
+    <title>Doreen's Playground</title>
     <link rel="shortcut icon" href="../public/res/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../public/styles/root.css">
     <link rel="stylesheet" href="../public/styles/auth.css">
     <script src="../public/scripts/auth.js" defer></script>
 </head>
 
-<body class="flex-column">
+<body class="flex-row">
+    <div class="background w100 h100 flex-row">
+    </div>
     <main class="flex-column">
-        <div class="container flex-column">
-            <div id="card" face="login" class="flex-row">
-                <div class="face login flex-column">
-                    <div class="flex-row w100 topleft icon">
-                        <img src="../public/res/images/heart.svg" alt="">
-                    </div>
-
-                    <div class="logo flex-column">
-                        <img src="../public/res/images/heart_token.svg" alt="">
-                        <h2 class="title">Românească</h2>
-                    </div>
-                    <form id="login-form" action="/login" method="post">
-                        <input type="email" name="email" placeholder="Email" required>
-                        <input type="password" name="password" placeholder="Password" required>
-                        <p id="login-error" class="error"></p>
-                        <button type="submit" class="submit">Login</button>
-                    </form>
-                    <div class="flex-row">
-                        <button class="switch" onclick="switchToFace('register')">Create an account?</button>
-                    </div>
-                    
-                    <div class="flex-row w100 bottomright icon">
-                        <img src="../public/res/images/heart.svg" alt="">
-                    </div>
+        <div class="container flex-row">
+            <div class="side left flex-column">
+                <div class="flex-column w100">
+                    <div class="brick"></div>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                        <path fill="#161d1d" fill-opacity="1" d="M0,288L24,261.3C48,235,96,181,144,176C192,171,240,213,288,234.7C336,256,384,256,432,229.3C480,203,528,149,576,144C624,139,672,181,720,176C768,171,816,117,864,106.7C912,96,960,128,1008,160C1056,192,1104,224,1152,224C1200,224,1248,192,1296,197.3C1344,203,1392,245,1416,266.7L1440,288L1440,0L1416,0C1392,0,1344,0,1296,0C1248,0,1200,0,1152,0C1104,0,1056,0,1008,0C960,0,912,0,864,0C816,0,768,0,720,0C672,0,624,0,576,0C528,0,480,0,432,0C384,0,336,0,288,0C240,0,192,0,144,0C96,0,48,0,24,0L0,0Z"></path>
+                    </svg>
                 </div>
 
-                <div class="face register flex-column">
-                    <div class="flex-row w100 topleft icon">
-                        <img src="../public/res/images/spade.svg" alt="">
-                    </div>
-                    <div class="logo flex-column">
-                        <img src="../public/res/images/spade_token.svg" alt="">
-                        <h2 class="title">Românească</h2>
-                    </div>
+                <div class="flex-column w100">
+                    <div class="logo fit-image"><img src="../public/res/cards images/aces.png" alt=""></div>
+                    <h2 class="title">Doreen's Playground</h2>
+                </div>
 
-                    <form id="register-form" action="/register" method="post" autocomplete="off">
-                        <input type="email" name="email" placeholder="Email" required>
-                        <input type="text" name="username" placeholder="Username" required>
-                        <input type="password" name="password" placeholder="Password" required>
-                        <p id="register-error" class="error"></p>
-                        <button type="submit" class="submit">Register</button>
-                    </form>
-
-                    <div class="flex-row">
-                        <button class="switch" onclick="switchToFace('login')">Already have an account?</button>
+                <div class="flex-column w100">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                        <path fill="#161d1d" fill-opacity="1" d="M0,128L26.7,149.3C53.3,171,107,213,160,202.7C213.3,192,267,128,320,96C373.3,64,427,64,480,106.7C533.3,149,587,235,640,240C693.3,245,747,171,800,165.3C853.3,160,907,224,960,250.7C1013.3,277,1067,267,1120,224C1173.3,181,1227,107,1280,80C1333.3,53,1387,75,1413,85.3L1440,96L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path>
+                    </svg>
+                    <div class="brick"></div>
+                </div>
+            </div>
+            <div class="side right flex-row">
+                <div id="card" class="card flex-row" face="login">
+                    <div class="face login flex-column">
+                        <div class="subtitle">Log in</div>
+                        <form id="login-form" method="dialog" class="flex-column">
+                            <input type="email" name="email" required placeholder="Enter your email">
+                            <input type="password" name="password" required placeholder="Enter your password">
+                            <div class="error" id="login-error">Error</div>
+                            <button type="submit">Log in</button>
+                        </form>
+                        <div class="switch" onclick="switchToFace('register')">Create an account?</div>
                     </div>
-                    <div class="flex-row w100 bottomright icon">
-                        <img src="../public/res/images/spade.svg" alt="">
+                    <div class="face register flex-column">
+                        <div class="subtitle">Register</div>
+                        <form id="register-form" method="dialog" class="flex-column">
+                            <input type="email" name="email" required placeholder="Enter your email">
+                            <input type="text" name="username" required placeholder="Create a username">
+                            <input type="password" name="password" required placeholder="Create a password">
+                            <div class="error" id="register-error">Error</div>
+                            <button type="submit">Register</button>
+                        </form>
+                        <div class="switch" onclick="switchToFace('login')">Already have an account?</div>
                     </div>
                 </div>
-                
             </div>
         </div>
     </main>
 </body>
+
 </html>
