--- a/views/romaneasca.ejs
+++ b/views/romaneasca.ejs
@@ -132,7 +132,7 @@
     </div>
 
     <div class="chat flex-column">
-        <div class="messages  flex-column"></div>
+        <div class="messages  flex-column scrollbar"></div>
         <form method="dialog" id="chatForm" onsubmit="sendChat()" class="flex-row" autocomplete="off">
             <input type="text" name="message">
             <button class="send fit-image"><img src="../../public/res/UI/send.svg" alt=""></button>
