--- a/public/styles/romaneasca.css
+++ b/public/styles/romaneasca.css
@@ -71,10 +71,10 @@ body {
     cursor: pointer;
 }
 #waiting-screen .choose-team [team="0"]:hover{
-    border-bottom: solid 0.4rem var(--red); 
+    border-bottom: solid 0.4rem var(--redTeam); 
 }
 #waiting-screen .choose-team [team="1"]:hover{
-    border-bottom: solid 0.4rem hsl(0, 0%, 30%); 
+    border-bottom: solid 0.4rem var(--blackTeam); 
 }
 
 #waiting-screen .choose-team .team .logo{
@@ -333,21 +333,6 @@ section.bottom .hand{
     border-radius: 0.5rem;
     background-color: var(--dark);
     border: solid 0.05rem var(--black);
-}
-.chat .messages::-webkit-scrollbar{
-    width: 1rem;
-}
-.chat .messages::-webkit-scrollbar-thumb{
-    background-color: var(--gray);
-    border-left: solid 3px var(--black);
-    border-radius: 2px;
-}
-.chat .messages::-webkit-scrollbar-thumb:hover{
-    background-color: var(--maind);
-}
-.chat .messages::-webkit-scrollbar-track{
-    background-color: var(--dark);
-    border-left: solid 3px var(--black);
 }
 .chat .messages .message{
     color: var(--white);
