--- a/views/test.ejs
+++ b/views/test.ejs
@@ -11,7 +11,8 @@
 </head>
 
 <body class="flex-row">
-    <div class="box flex-row">
+    <!-- <div class="box flex-row">
+
         <div class="side left flex-column">
             <div class="flex-column w100">
                 <div class="brick">
@@ -58,7 +59,20 @@
     </div>
 
     <div class="background w100 h100 flex-row">
-    </div>
-</body>
+    </div> -->
 
+
+    <div class="box flex-column">
+
+
+
+        <label class="toggle-switch flex-row">
+            <input type="checkbox" >
+            <div class="slider flex-row"></div>
+        </label>
+        
+
+    </div>
+
+</body>
 </html>
