--- a/public/styles/test.css
+++ b/public/styles/test.css
@@ -5,105 +5,8 @@
     height: 100vh;
     position: relative;
 }
-/*
 
-.background{
-    background-image: radial-gradient(circle, var(--maind), var(--black));
-    opacity: 0.65;
-}
-
-.box{
-    z-index: 3;
-    position: absolute;
-    width: 40rem;
-    height: 30rem;
-    background-color: var(--dark);
-    border-radius: 0.5rem;
-}
-.box .side{
-    width: 50%;
-    height: 100%;
-}
-.brick{
-    width: 100%;
-    height: 2rem;
-    background-color: var(--dark);
-}
-.box .left{
-    justify-content: space-between;
-    background-image: linear-gradient(45deg, var(--main), var(--mainl));
-}
-.box .left svg{
-    width: 100%;
-}
-.card{
-    color: var(--light);
-    background-color: var(--dark);
-    padding: 2rem;
-    border-radius: 0.5rem;
-    transition: all 0.2s ease;
-    justify-content: space-between;
-}
-.title{
-    color: var(--light);
-    text-transform: uppercase;
-    text-align: center;
-}
-.title h1{
-    font-size: 1.5rem;
-    text-shadow: 1px 1px 2px var(--maind);
-}
-.title .logo{
-    width: 10rem;
-}
-form.flex-column{
-    justify-content: space-between
-}
-div.set{
-    align-items: flex-start;
-    margin-bottom: 2rem;
-}
-label{
-    margin-bottom: 0.25rem;
-    color: var(--gray);
-}
-input::placeholder{
-    color: gray;
-}
-input{
-    width: 100%;
-    outline: none;
-    background-color: transparent;
-    padding: 0.5rem;
-    border-radius: 0.25rem;
-    border: solid 0.05rem gray;
-    margin: 0.5rem 0;
-    font-size: 1rem;
-    transition: all 0.2s ease;
-}
-input:focus-within{
-    border-color: var(--mainl);
-    background-color: var(--gray);
-}
 button{
-    width: 100%;
-    padding: 0.75rem;
-    background-color: var(--main);
-    border-radius: 0.25rem;
-    font-size: 1rem;
-    transition: all 0.2s ease;
-}
-button:hover{
-    background-color: var(--mainl);
-}
-.switch{
-    cursor: pointer;
-} */
-
-.box{
-    background-color: var(--white);
-    width: 20rem;
-    height: 30rem;
-    display: flex;
+    background-color: white;
     padding: 1rem;
 }
