--- a/views/main.ejs
+++ b/views/main.ejs
@@ -21,7 +21,7 @@
                 <%- include('partials/deck', {game: 'septica', suit: 'heart', color:'redTeam'})%>
             </div>
             <div class="game-box flex-row">
-                <%- include('partials/deck', {game: 'blackjack', suit: 'spade', color:'blackTeam'})%>
+                <%- include('partials/deck', {game: 'kems', suit: 'spade', color:'blackTeam'})%>
             </div>
         </section>
     </main>
