--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -19,7 +19,7 @@
     <main class="flex-column w100">
         <form id="profile-form" class="profile box flex-column" method="POST" action='/profile/updateProfile'
             enctype="multipart/form-data" autocomplete="off">
-            <h2 class="subtitle">Update your preferences</h2>
+            <h2 class="subtitle">Update your profile</h2>
             <div class="flex-row w100 user">
                 <div class="avatar">
                     <img src="../public/data/avatars/<%=user.avatar%>" alt="">
